--- a/zy.css
+++ b/zy.css
@@ -1,8 +1,8 @@
 /*
 * @Author: lenovo
 * @Date:   2019-06-19 19:10:00
-* @Last Modified by:   lenovo
-* @Last Modified time: 2019-06-23 20:16:54
+* @Last Modified by:   pyy
+* @Last Modified time: 2019-06-23 20:33:17
 */
 *{
 	margin:0;
@@ -77,35 +77,68 @@ a{
 	margin-left:10px;
 	margin-right:8px;
 }
+.a a{
+	color:#050505;
+}
 .b{
 	margin-right:42px;
+}
+.b a{
+	color:#050505;
 }
 .c{
 	margin-right:60px;
 }
+.c a{
+	color:#050505;
+}
 .d{
 	margin-right:60px;
+}
+.d a{
+	color:#050505;
 }
 .e{
 	margin-right:60px;
 }
+.e a{
+	color:#050505;
+}
 .f{
 	margin-right:60px;
+}
+.f a{
+	color:#050505;
 }
 .g{
 	margin-right:60px;
 }
+.g a{
+	color:#050505;
+}
 .h{
 	margin-right:60px;
+}
+.h a{
+	color:#050505;
 }
 .i{
 	margin-right:60px;
 }
+.i a{
+	color:#050505;
+}
 .j{
 	margin-right:60px;
 }
+.j a{
+	color:#050505;
+}
 .k{
 	margin-right:28px;
+}
+.k a{
+	color:#050505;
 }
 a:visited{
 	color:#3aa747;
